2.0.0
CMDFLAG - Add a -windowtitle command flag, primarily intended to be used to assist with testing so that multiple program instances can be easily distinguished.

1.6.4.6

RPC - Fix an issue introduced in 1.6.4.3 which can cause users running with "-disablewallet" to experience RPC freezes when calling certain RPC commands.

1.6.4.5

UI - Fix "run on boot" links that were broken by testnet changes and other minor "run on boot" corrections.

1.6.4.1

Minor bugfix release.
UI - Some small translation changes
RPC - Add an HDIndex flag to 'listaccounts' RPC output, useful for debugging HD wallet issues.
CORE - Speed up address allocation when -keypool is set to a larger than default size.

1.6.4

CMDFLAG - Add new command line flag '-coinbasesignature' to make it easy to add coinbase signatures to generated blocks (predominantly meant for testnet)
CMDFLAG - Add new command line flag '-accountpool' to increase the default account look ahead size. (Needed in some cases to find accounts on rescan when large account gaps are present)
UI - Add a special warning if the users wallet.dat is readonly (instead of displaying a generic/scary 'corrupted wallet' message)
UI - Improvements to send dialog, improve handling when user tries to send amounts equal too or larger than available balance.
UI - New menu item for importing private keys.
UI - New menu item to allow users to easily rescan without having to use command line flags or mess around in RPC console.
UI - Improve the way rescan (and other actions that require progress) display in the program.
UI - Fix a bug where transaction screen would sometimes show transactions for all accounts instead of just the active one.
RPC - Modify createaccount command so that it can also create legacy accounts.
RPC - New commands for read only (watch) HD accounts. getreadonlyaccount, importreadonlyaccount.
RPC - New command for read only (watch) HD seeds, getreadonlyseed.
RPC - New 'deleteaccount' command